[package]
name = "LumiaLive"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
hex = "0.4.3"
hueclient = "0.4.3"
log = "0.4.25"
mpsc = "0.2.5"
parking_lot = "0.12.3"
rust_socketio = "0.6.0"
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
